--- a/DataSet/Train/readme
+++ b/DataSet/Train/readme
@@ -1,1 +1,4 @@
 
+g729a_0 负样本（未隐写）Chinese：130328   English：251968 共382296
+g729a_Steg 正样本 其中QIM嵌入率：10%（45875）、20%（49698）、30%（45874）、40%（49700）
+PMS嵌入率：10%（45877）、20%(49696)、30%(45876)、40%(49700）
